fixed x button spacing on tags

--- a/react-app/src/components/NewImageForm/NewImageForm.css
+++ b/react-app/src/components/NewImageForm/NewImageForm.css
@@ -85,7 +85,7 @@ textarea {
   display: flex;
   border-radius: 10px;
   border: none;
-  margin-left: 3px;
+  margin-left: 5px;
   color: white;
   background-color: rgb(74, 74, 74);
 }
